# learn-django-react-auth

./: README.md  compose.yml
backend/: Dockerfile  pyproject.toml
backend/api/: urls.py  views.py
backend/djangocookieauth/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: fetch.js
nginx/: nginx.conf
