[tool.poetry]
name = "django-react-auth"
version = "0.1.0"
description = "Tutorial to learn how to authenticate with django and a SPA"
authors = ["James Bui <jamesvo.bui@core4ce.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
